Changes in Version 0.13.1
  o Bootstrapping now occurs before standardizing the data (thanks to Yiwei Yang and Amanda Montoya)
  o Improved support for N=1 models in dlvm1 (e.g., for true ML estimation)
  o Fixed a bug with missing values in the beta starting values matrix for dlvm1 models

Changes in Version 0.13
  o Added bootstrap support:
    o Every model now supports 'bootstrap' (to enable bootstrap), 'boot_sub' (for subsampling) and 'boot_resample' (to resample)
    o Enabling these will bootstrap the data *once* and create a psychonetrics object for the bootstrap sample
    o The function 'aggregate_bootstraps' can be used to aggregate bootstraps:
      o use print(...) for some general info
      o use parameters(...) for the bootstrap results on the parameters
      o use fit(...) for the bootstrap results on the fit indices
      o use CIplot(...) for the bootstrap results on the confidence intervals (enable split0=TRUE if model selection is used)

Changes in Version 0.12
  o Updates for the dlvm1 model family:
    o Changed the starting values for dlvm1 models for better convergence
    o Added the 'start' argument to the dlvm1 model family. Use start = "version1" to use pre 0.12 start values
    o Added the 'baseline' argument to dlvm1 model family, which now defaults to "stationary_random_intercept". Note: this will change incremental fit indices! To recover old behavior, set baseline = "independence"
  o The log(det(kappa)) value used in fit function is now computed in FIML in the same way as computed in ML framework, this should lead to more stability, but might also lead to some different chi-square values
  o The startreduce argument in prune() now defaults to 1
  o Using "empty" for matrix specification is now deprecated; use "diag" or "zero" instead.
  o getmatrix will no longer evaluate a model if it is not computed (now returns start values)
  o the 'startreduce' argument in 'prune' now defaults to 1